@@ -2,7 +2,7 @@
 
 <!-- =================================================================== -->
 <!-- MyCoRe sample application build file for use with Apache Ant        -->
-<!-- $Revision: 1.149 $ $Date: 2006/12/11 13:48:51 $                      -->
+<!-- $Revision: 1.150 $ $Date: 2006/12/11 14:45:22 $                      -->
 <!-- =================================================================== -->
 
 <project name="DocPortal" default="usage" basedir=".">
@@ -32,7 +32,7 @@
     <echo level="info">Operating system   : ${os.name} Version ${os.version} on ${os.arch} </echo>
     <echo level="info">Java version       : JDK ${ant.java.version} Version ${java.version} from ${java.vendor}</echo>
     <echo level="info">Java home          : ${env.JAVA_HOME}</echo>
-    <echo level="info">Ant build file     : $Revision: 1.149 $ $Date: 2006/12/11 13:48:51 $</echo>
+    <echo level="info">Ant build file     : $Revision: 1.150 $ $Date: 2006/12/11 14:45:22 $</echo>
     <echo level="info">Ant version        : ${ant.version}</echo>
     <echo level="info">XML Store type     : ${MCR.XMLStore.Type}</echo>
     <echo level="info">JDBC Store type    : ${MCR.JDBCStore.Type}</echo>
@@ -104,7 +104,7 @@
       do 'create.scripts' in all modules...
     </echo>
     <subant target="create.scripts" inheritall="true" inheritrefs="true">
-      <fileset dir="${basedir}" includes="modules/module-*/build.xml" excludes="modules/module-webservices/build.xml">
+      <fileset dir="${basedir}" includes="modules/module-*/build.xml" >
       	<containsregexp expression="\u003ctarget.*name=\u0022create.scripts\u0022"/> 
       </fileset>
     </subant>
@@ -532,7 +532,8 @@ $JAVA_HOME/bin/java -Xmx${java.maxmemory} ${mycore.cmd.class}
 	<copy todir="${build.lib}">
       <fileset dir="${mycore.lib}" includes="*.jar" />
       <fileset dir="${mycore.lib}" includes="*.zip" />
-      <fileset dir="${mycore.modules}" includes="module-*/lib/*.jar" />
+      <fileset dir="${mycore.modules}/module-webservices/lib" includes="*.jar" />
+      <fileset dir="${mycore.modules}/module-wcms/aif/lib" includes="*.jar" />
 	</copy>
     <!-- remove unpacked jar and zip files -->
     <delete dir="${build.lib}/third-party" />
@@ -865,19 +866,19 @@ $JAVA_HOME/bin/java -Xmx${java.maxmemory} ${mycore.cmd.class}
 	
   <!-- save modified static web content -->	
   <target name="safeWebContent">
-	    <copy todir="${docportal.webpages}/config/" preservelastmodified="true" failonerror="false">
+	    <copy todir="${MCR.Save.FileSystem}/webpages/config/" preservelastmodified="true" failonerror="false">
 	      <fileset file="${build.webapps}/config/navigation.xml" />
 	    </copy>  	
-	    <copy todir="${docportal.webpages}/content" preservelastmodified="true" failonerror="false">
+	    <copy todir="${MCR.Save.FileSystem}/webpages/content" preservelastmodified="true" failonerror="false">
 	      <fileset dir="${build.webapps}/content" />
 	    </copy>  	
-	    <copy todir="${docportal.webpages}/templates" preservelastmodified="true" failonerror="false">
+	    <copy todir="${MCR.Save.FileSystem}/webpages/templates" preservelastmodified="true" failonerror="false">
 	      <fileset dir="${build.webapps}/templates" />
 	    </copy>  	  
-	    <copy todir="${docportal.webpages}/images" preservelastmodified="true" failonerror="false">
+	    <copy todir="${MCR.Save.FileSystem}/webpages/images" preservelastmodified="true" failonerror="false">
 	      <fileset dir="${build.webapps}/images/" />
 	    </copy>  	
-	    <copy todir="${docportal.webpages}/documents" preservelastmodified="true" failonerror="false">
+	    <copy todir="${MCR.Save.FileSystem}/webpages/documents" preservelastmodified="true" failonerror="false">
 	      <fileset dir="${build.webapps}/documents" />
 	    </copy>  	
   </target>
@@ -971,13 +972,13 @@ $JAVA_HOME/bin/java -Xmx${java.maxmemory} ${mycore.cmd.class}
   </target>
 
   <target name="clean.data" description="Removes only all data files, cleaning up" >
-    <delete dir="${MCR.IFS.ContentStore.FS.URI}" />
     <delete dir="${MCR.editor_base_directory}"/>
     <delete dir="${MCR.Editor.FileUpload.TempStoragePath}"/>
     <delete dir="${MCR.Searcher.lucene-metadata.IndexDir}"/>
     <delete dir="${MCR.Searcher.lucene-content.IndexDir}"/>
     <delete dir="${MCR.Lucene.LockDir}"/>
     <antcall target="clean.directories.sql_data" />
+    <delete dir="${data}" />
   </target>
 
   <target name="clean.directories.sql_data" if="MCR.persistence_sql_data_directory">
@@ -1059,18 +1060,33 @@ $JAVA_HOME/bin/java -Xmx${java.maxmemory} ${mycore.cmd.class}
   </target>
 
   <!-- =================================================================== -->
+  <!-- Collect all documentations                                          -->
+  <!-- =================================================================== -->
+
+  <target name="docs" depends="up2date" >
+    <echo level="info">Collect all DocPortal documentations...</echo>
+	<copy todir="${build}/javadocs-mycore">
+      <fileset dir="${mycore}/documentation/html" />
+	</copy>
+	<copy todir="${build}" file="${mycore}/documentation/Overview/Overview.pdf" />
+	<copy todir="${build}" file="${mycore}/documentation/UserGuide/UserGuide.pdf" />
+	<copy todir="${build}" file="${mycore}/documentation/ProgGuide/ProgrammerGuide.pdf" />
+	<copy todir="${build}" file="${docportal}/documentation/QuickInstallationGuide.pdf" />
+ </target>
+    
+  <!-- =================================================================== -->
   <!-- Create the HTML JavaDocs from sources                               -->
   <!-- =================================================================== -->
 
   <target name="javadocs" depends="up2date" if="javadocs.outdated" description="creates JavaDoc API documentation in HTML format">
     <echo level="info">Building the DocPortal JavaDoc API documentation...</echo>
     
-    <mkdir dir="${basedir}/javadocs" />
+    <mkdir dir="${build.javadocs}" />
     <javadoc
       packagenames        = "org.mycore.*"
       sourcepath          = "${basedir}/sources"
-      destdir             = "${basedir}/javadocs"
-      classpathref        = "javadocs.classpath"
+      destdir             = "${build.javadocs}"
+      classpathref        = "docportal.classpath"
       author              = "true"
       version             = "true"
       use                 = "true"
@@ -1097,8 +1113,8 @@ $JAVA_HOME/bin/java -Xmx${java.maxmemory} ${mycore.cmd.class}
     </javadoc>
     <echo level="info">---------------------------------------------------------</echo>
 
-    <chmod dir="${basedir}/javadocs" type="file" perm="ugo+r"  includes="**/*" />
-    <chmod dir="${basedir}/javadocs" type="dir"  perm="ugo+rx" includes="**/*" />
+    <chmod dir="${build.javadocs}" type="file" perm="ugo+r"  includes="**/*" />
+    <chmod dir="${build.javadocs}" type="dir"  perm="ugo+rx" includes="**/*" />
   </target>
 
     <!-- =================================================================== -->
