@@ -2,7 +2,7 @@
 	
   <!-- =================================================================== -->
   <!-- Global properties                                                   -->
-  <!-- $Revision: 1.14 $ $Date: 2006/12/11 13:48:51 $                     -->
+  <!-- $Revision: 1.15 $ $Date: 2006/12/11 14:45:22 $                     -->
   <!-- =================================================================== -->
 
   <!-- Javac properties -->
@@ -82,7 +82,7 @@
   <property name="build" value="${docportal}/build" />
   <property name="build.bin" value="${build}/bin" />
   <property name="build.classes" value="${build}/classes" />
-  <property name="build.javadocs" value="${build}/javadocs" />
+  <property name="build.javadocs" value="${build}/javadocs-docportal" />
   <property name="build.config" value="${build}/config" />
   <property name="build.lib" value="${build}/lib" />
   <property name="build.modules" value="${build}/modules" />
